scroll to new added node

--- a/extension-yueliu1/css/index.css
+++ b/extension-yueliu1/css/index.css
@@ -37,6 +37,8 @@ ul {
   list-style-type: none;
   padding-left: 0;  /* No padding for root */
   margin-left: 0;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 li {
@@ -427,7 +429,7 @@ button:active {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  padding: 0px;
+  padding: 4px 4px;
   gap: 4px;
 }
 .item {
@@ -453,4 +455,8 @@ button:active {
   white-space: nowrap;
   overflow: hidden;
   min-width: 0;
+}
+.highlight {
+  background-color: #d9d9d9;;
+  transition: background-color 0.5s ease;
 }
