--- a/extension/css/index.css
+++ b/extension/css/index.css
@@ -1,19 +1,20 @@
 body {
-  width: 600px;  /* Fixed width for popup */
+  min-width: 600px;  /* Fixed width for popup */
   height: auto;
   min-height: 600px;
   margin: 0;
-  overflow-y:hidden;
+  overflow: auto;
 }
 
 #bookmarkTree {
   margin: 0;
-  padding-top: 25px;
+  padding-top: 10px;
   padding-bottom: 55px;
   overflow: auto;
 }
 /* Basic header styling */
 header {
+  height: 56px;
   position: fixed;
   background-color: white;
   width: 100%;
@@ -103,6 +104,7 @@ li.open ul {
   justify-content: flex-start;
   padding: 16px;
   padding-left: 0px;
+  padding-top: 48px;
   box-sizing: border-box;
   gap: 8px;
   text-align: left;
@@ -111,13 +113,14 @@ li.open ul {
   font-family: 'Segoe UI Variable';
 }
 .title-row {
+  padding: 16px;
+  padding-bottom: 8px;
   align-self: stretch;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   gap: 4px;
-  padding: 10px;
 }
 .icon-bookmark-copilot {
   width: 20px;
@@ -140,19 +143,21 @@ li.open ul {
 }
 .button {
   border-radius: 4px;
-  background-color: #0f6cbd;
+  background-color: rgba(255, 255, 255, 0);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 2px 8px;
-  font-size: 12px;
-  color: #fff;
-  font-family: 'Segoe UI';
+  padding: 2px 4px;
+  cursor: pointer;
 }
-button:active {
-  background-color: #0056b3;
+.button:active {
+  background-color: #e0e0e0;
   transform: scale(0.95);
+}
+.button:hover {
+  background-color: #f0f0f0;
+  border-color: #999;
 }
 .container {
   height: 20px;
@@ -188,6 +193,7 @@ button:active {
   flex-shrink: 0;
 }
 .bottom-card-level {
+  width: 100%;
   align-self: stretch;
   display: flex;
   flex-direction: column;
@@ -289,6 +295,7 @@ button:active {
   align-items: center;
   justify-content: center;
   padding: 2px;
+  cursor: pointer;
 }
 .star-icon {
   width: 20px;
@@ -358,6 +365,7 @@ button:active {
   justify-content: center;
   padding: 2px 8px;
   gap: 4px;
+  cursor: pointer;
   color: #fff;
 }
 .button4 {
@@ -371,6 +379,7 @@ button:active {
   justify-content: center;
   padding: 2px 8px;
   gap: 4px;
+  cursor: pointer;
 }
 .list-item-folder {
   align-self: stretch;
@@ -461,4 +470,80 @@ button:active {
 .highlight {
   background-color: #d9d9d9;;
   transition: background-color 0.5s ease;
+}
+.dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+.wand-icon {
+	width: 20px;
+	position: relative;
+	height: 20px;
+	overflow: hidden;
+	flex-shrink: 0;
+}
+.menu-list-item-text {
+	position: relative;
+	line-height: 16px;
+}
+.menu-list-text {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: flex-start;
+	padding: 0px 2px;
+}
+.menu-list-container {
+	flex: 1;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	padding: 6px;
+	gap: 4px;
+}
+.menu-list-item {
+	align-self: stretch;
+	border-radius: 2px;
+	height: 32px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+  white-space: nowrap;
+}
+.icon-star-sparkles {
+	width: 20px;
+	position: relative;
+	height: 20px;
+}
+.menu-list-item:hover {
+  background-color: #f5f5f5;
+}
+.menu-list-item.disabled {
+  color: #cccccc;
+  pointer-events: none;
+}
+.menu-list {
+  align-self: stretch;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  background-color: #fff;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: 14px;
+  color: #424242;
+  font-family: Calibri;
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 1000;
+  width: auto;
+  white-space: normal;
+}
+.menu-list.show {
+  display: block;
 }
